Check Y ,Change status more alert alram

--- a/www/index.html
+++ b/www/index.html
@@ -1756,7 +1756,7 @@
     </div>
     <!--End Report multi-->
     <!--Edit View-->
-    <div data-role="view" id="tabstrip-edit" data-model="app.jobService.viewModel" data-init="app.jobService.editInit" data-show="app.jobService.showbyid" data-layout="tabstrip-layout">
+    <div data-role="view" id="tabstrip-edit" data-model="app.jobService.viewModel" data-init="app.jobService.editInit" data-show="app.jobService.showbyid" data-layout="tabstrip-layout" >
         <header data-role="header">
             <div data-role="navbar">
                 <!-- <a data-role="button" class="fa" data-icon="fa-back" data-align="left" data-bind="click: onBack"></a> -->
@@ -1871,7 +1871,7 @@
                 </li>
             </ul>
             <ul data-role="listview" data-style="inset" style="display: none">
-                <li data-icon="contact">
+                <li data-icon="contact" class="act-bind">
                     <div class="position-left">
                         <b>Change Status to</b>
                     </div>
